# paceforge

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  _apply.py  docker-compose.yml  nginx.conf  pyproject.toml  supervisord.conf  week-review.md
.claude/skills/coach/: SKILL.md
.github/instructions/: app.instructions.md  dashboard.instructions.md
.github/skills/design-engineering/: SKILL.md
.github/skills/frontend-design/: SKILL.md
.github/skills/impeccable-design/: SKILL.md
.github/skills/taste-design/: SKILL.md
.github/workflows/: analyze.yml  cd.yml  ci.yml  coach.yml  hyrox.yml  pages.yml  push.yml  save-benchmarks.yml  save-events.yml  sync.yml
.streamlit/: config.toml
app-logs/LogFiles/: __lastCheckTime.txt
data/: activities.json  benchmarks.json  history.jsonl  hyrox.json  hyrox_preview.json  plan.json  profile.json
data/analyses/: 23100204807.md  23153362041.md  23171846485.md  23196616744.md  23232844070.md  23253401122.md  23373151954.md  23373152945.md  23373153356.md  23373153781.md  23422094990.md  23425853878.md  23441259894.md  23445793820.md  _tokentest.md
data/details/: 22741578395.json  22757008810.json  22768847261.json  22783980251.json  22783981314.json  22789322637.json  22793358897.json  22821448244.json  22839826873.json  22850620999.json  22871935838.json  22874424452.json  22891504024.json  22891753823.json  22916976120.json  22924691739.json  22983664134.json  22983665750.json  22983666398.json  23002985376.json  23014956052.json  23041045228.json  23100204807.json  23100205138.json  23100205578.json  23114468006.json  23119936514.json  23124281202.json  23153360817.json  23153362041.json  23171846485.json  23183216587.json  23196616744.json  23208467836.json  23208716875.json  23232844070.json  23233353570.json  23253401122.json  23278624621.json  23283759058.json  (+11 more)
mobile/: App.tsx  app.json  package-lock.json  package.json
mobile/src/api/: client.ts
mobile/src/components/: MetricsBanner.tsx
mobile/src/navigation/: RootNavigator.tsx
mobile/src/screens/: ActivityDetailScreen.tsx  CalendarScreen.tsx  FeedScreen.tsx  FitnessProfileScreen.tsx  GarminConnectScreen.tsx  HyroxScreen.tsx  LoginScreen.tsx  PlanScreen.tsx  ProfileScreen.tsx  RegisterScreen.tsx  WorkoutDetailScreen.tsx
mobile/src/services/: healthSync.ts
mobile/src/store/: auth.ts
mobile/src/theme/: index.ts
scripts/: build_site_data.py  decommission_azure.sh  migrate_from_sqlite.py
src/paceforge/: __init__.py  actions.py  cli.py  dashboard.py  dashboard_old.py  mcp_server.py  store.py
src/paceforge/ai/: __init__.py  cache.py  coach.py  llm_client.py
src/paceforge/api/: __init__.py  app.py  config.py
src/paceforge/auth/: database.py  models.py  security.py
src/paceforge/engine/: __init__.py  adaptation.py  ai_planner.py  analytics.py  durability.py  limiters.py  load.py  matching.py  planner.py  strength.py  validate.py  vdot.py  workouts.py
src/paceforge/garmin/: __init__.py  client.py
src/paceforge/hyrox/: __init__.py  (+4 more)
tasks/: fitness-assessment-plan.md
tests/: test_activity_details.py  test_ai_cache.py  test_auth.py  test_diet_parse_bug.py  test_durability.py  test_endpoints_auth.py  test_garmin_steps.py  test_health_data.py  test_history.py  test_hyresult.py  test_hyrox.py  test_hyrox_import.py  test_json_repair_validation.py  test_limiters.py  test_llm_client.py  test_load.py  test_matching.py  test_planner.py  test_store_merge.py  test_strava.py  test_strength.py  test_token.py  test_vdot.py
tests/fixtures/: hyresult_berlin.html
web/: index.html
(+44 files in other folders)
