[project]
name = "paceforge"
version = "0.1.0"
description = "AI-enhanced running plan generator for Garmin watches"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "vipe" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "garminconnect[workout] @ git+https://github.com/diegoscarabelli/python-garminconnect.git@feat/widget-cffi-login-strategy",
    "curl_cffi>=0.7",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "openai>=1.0",
    "anthropic>=0.39",
    "streamlit>=1.40",
    "streamlit-calendar>=1.4",
    "plotly>=5.0",
    "extra-streamlit-components>=0.1.60",
    "PyJWT>=2.8",
    "bcrypt>=4.0",
    "pydantic[email]>=2.0",
    "beautifulsoup4>=4.11.0",
    "lxml>=4.9.0",
    "json-repair>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/paceforge"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "S"]
ignore = [
    "S101",   # assert in tests
    "E501",   # line too long (dashboard is verbose HTML)
    "E702",   # multiple statements on one line
    "B008",   # function call in default arg (FastAPI Depends)
    "B007",   # unused loop variable
    "B017",   # assert-raises-exception (broad)
    "B904",   # raise without from
    "S105",   # hardcoded password string (test fixtures)
    "S106",   # hardcoded password func arg (test fixtures)
    "S110",   # try-except-pass
    "S608",   # hardcoded SQL
    "N806",   # non-lowercase variable in function
    "N814",   # camelcase imported as constant
    "SIM102", # collapsible if
    "E402",   # import not at top (conditional imports)
    "B905",   # zip() without strict= (not needed for same-length lists)
    "F541",   # f-string without placeholders
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
